--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
 		"php": "^8.1",
 		"guzzlehttp/guzzle": "^7.2",
 		"laravel/framework": "^9.19",
+		"laravel/horizon": "^5.10",
 		"laravel/tinker": "^2.7",
-		"php-open-source-saver/jwt-auth": "^1.4"
+		"php-open-source-saver/jwt-auth": "^1.4",
+		"predis/predis": "^2.0"
 	},
 	"require-dev": {
 		"fakerphp/faker": "^1.9.1",
